[package]
name = "rgb-audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lenovo_legion_hid = { path = "libs/lenovo-legion-hid" }
vis-core = { path = "libs/visualizer2/vis-core" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1