[package]
name = "rgb-audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lenovo_legion_hid = { path = "libs/lenovo-legion-hid" }
vis-core = { path = "libs/visualizer2/vis-core" }
# windows = { version = "0.39.0", features = ["Win32_Media_Audio_Endpoints", "Media_Audio"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
